Fix align organizer

--- a/app/assets/stylesheets/_projects.sass
+++ b/app/assets/stylesheets/_projects.sass
@@ -46,6 +46,14 @@
     h3
       color: white
 
+    ul
+      text-align: center
+
+      li.avatar
+        display: inline-block
+        margin-bottom: 7px
+        margin-right: 2px
+
   .buttons
     margin-top: 80px
 
